--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,9 +1,16 @@
+body {
+  background-color: #e2e2e7;
+}
+
+
 table.tabelaPrecos {
     border: 1px solid #1C6EA4;
     background-color: #EEEEEE;
-    width: 100%;
     text-align: left;
     border-collapse: collapse;
+    margin-left: 0.5%;
+    margin-right: 0.5%;
+    width: 99%;
   }
   table.tabelaPrecos td, table.tabelaPrecos th {
     border: 1px solid #AAAAAA;
@@ -64,12 +71,14 @@ table.tabelaPrecos {
       background-color: #dbdbe0;
       padding-left: 20px;
       padding-top: 10px;
+      margin-top: 45px;
+      width: 100%;
   }
 
-  body {
-      background-color: #e2e2e7;
+  .formFiltro label {
+    width: 100px;
   }
-
+  
   #atualizarLista {
     background-color: #4CAF50;
     color:white;
@@ -77,5 +86,31 @@ table.tabelaPrecos {
     border-color: #4CAF50;
     margin-top: 5px;
     margin-bottom: 10px;
+  }
 
+  .tableTitle {
+    margin-left: 0.5%;
+  }
+
+  #sliderWatts {
+    max-width: 30%;
+  }
+
+  #wattsFilter {
+    background-color: #dbdbe0;
+  }
+
+  .filterRow {
+    width: 25%;
+  }
+
+  .filterRow label {
+    width: 30%;
+    display: inline-block;
+  }
+
+  #containerButtonFilter {
+    width: 10%;
+    display: flex;
+    justify-content: center;
   }
