--- a/public/css/index.css
+++ b/public/css/index.css
@@ -86,7 +86,7 @@ table.tabelaPrecos {
       background-color: #dbdbe0;
       padding-left: 20px;
       padding-top: 10px;
-      margin-top: 45px;
+      /* margin-top: 45px; */
       width: 100%;
       display: flex;
   }
