--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,151 +2,139 @@ body {
   background-color: #e2e2e7;
 }
 
+
 table.tabelaPrecos {
-  border: 1px solid #1C6EA4;
-  background-color: #EEEEEE;
-  text-align: left;
-  border-collapse: collapse;
-  margin-left: 0.5%;
-  margin-right: 0.5%;
-  width: 99%;
-}
+    border: 1px solid #1C6EA4;
+    background-color: #EEEEEE;
+    text-align: left;
+    border-collapse: collapse;
+    margin-left: 0.5%;
+    margin-right: 0.5%;
+    width: 99%;
+  }
+  table.tabelaPrecos td, table.tabelaPrecos th {
+    border: 1px solid #AAAAAA;
+    padding: 3px 2px;
+  }
+  table.tabelaPrecos tbody td {
+    font-size: 13px;
+  }
+  table.tabelaPrecos tr:nth-child(even) {
+    background: #D0E4F5;
+  }
+  table.tabelaPrecos thead {
+    background: #1C6EA4;
+    background: -moz-linear-gradient(top, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
+    background: -webkit-linear-gradient(top, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
+    background: linear-gradient(to bottom, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
+    border-bottom: 2px solid #444444;
+  }
+  table.tabelaPrecos thead th {
+    font-size: 15px;
+    font-weight: bold;
+    color: #FFFFFF;
+    border-left: 2px solid #D0E4F5;
+  }
+  table.tabelaPrecos thead th:first-child {
+    border-left: none;
+  }
+  
+  table.tabelaPrecos tfoot {
+    font-size: 14px;
+    font-weight: bold;
+    color: #FFFFFF;
+    background: #D0E4F5;
+    background: -moz-linear-gradient(top, #dcebf7 0%, #d4e6f6 66%, #D0E4F5 100%);
+    background: -webkit-linear-gradient(top, #dcebf7 0%, #d4e6f6 66%, #D0E4F5 100%);
+    background: linear-gradient(to bottom, #dcebf7 0%, #d4e6f6 66%, #D0E4F5 100%);
+    border-top: 2px solid #444444;
+  }
+  table.tabelaPrecos tfoot td {
+    font-size: 14px;
+  }
+  table.tabelaPrecos tfoot .links {
+    text-align: right;
+  }
+  table.tabelaPrecos tfoot .links a{
+    display: inline-block;
+    background: #1C6EA4;
+    color: #FFFFFF;
+    padding: 2px 8px;
+    border-radius: 5px;
+  }
 
-table.tabelaPrecos td, table.tabelaPrecos th {
-  border: 1px solid #AAAAAA;
-  padding: 3px 2px;
-}
+  table.tabelaPrecos a {
+      color: black;
+  }
 
-table.tabelaPrecos tbody td {
-  font-size: 13px;
-}
+  #containerMonitoramento {
+    display:flex;
+    flex-direction: column;
+  }
 
-table.tabelaPrecos tr:nth-child(even) {
-  background: #D0E4F5;
-}
+  #containerMonitoramento p {
+    margin-bottom: 3px;
+    margin-top: 0;
+  }
 
-table.tabelaPrecos thead {
-  background: #1C6EA4;
-  background: -moz-linear-gradient(top, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
-  background: -webkit-linear-gradient(top, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
-  background: linear-gradient(to bottom, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
-  border-bottom: 2px solid #444444;
-}
+  #containerMonitoramento h3 {
+    margin-top: 5px;
+    margin-bottom: 2px;
+  }
 
-table.tabelaPrecos thead th {
-  font-size: 15px;
-  font-weight: bold;
-  color: #FFFFFF;
-  border-left: 2px solid #D0E4F5;
-}
+  .formFiltro {
+      background-color: #dbdbe0;
+      padding-left: 20px;
+      padding-top: 10px;
+      /* margin-top: 45px; */
+      width: 100%;
+      display: flex;
+  }
 
-table.tabelaPrecos thead th:first-child {
-  border-left: none;
-}
+  .formFiltro .filterLeft {
+    width: 50%;
+  }
 
-table.tabelaPrecos tfoot {
-  font-size: 14px;
-  font-weight: bold;
-  color: #FFFFFF;
-  background: #D0E4F5;
-  background: -moz-linear-gradient(top, #dcebf7 0%, #d4e6f6 66%, #D0E4F5 100%);
-  background: -webkit-linear-gradient(top, #dcebf7 0%, #d4e6f6 66%, #D0E4F5 100%);
-  background: linear-gradient(to bottom, #dcebf7 0%, #d4e6f6 66%, #D0E4F5 100%);
-  border-top: 2px solid #444444;
-}
+  .formFiltro .filterRight {
+    width: 50%;
+  }
 
-table.tabelaPrecos tfoot td {
-  font-size: 14px;
-}
+  .formFiltro label {
+    width: 100px;
+  }
+  
+  #atualizarLista {
+    background-color: #4CAF50;
+    color:white;
+    border-radius: 5px;
+    border-color: #4CAF50;
+    margin-top: 5px;
+    margin-bottom: 10px;
+  }
 
-table.tabelaPrecos tfoot .links {
-  text-align: right;
-}
+  .tableTitle {
+    margin-left: 0.5%;
+  }
 
-table.tabelaPrecos tfoot .links a {
-  display: inline-block;
-  background: #1C6EA4;
-  color: #FFFFFF;
-  padding: 2px 8px;
-  border-radius: 5px;
-}
+  #sliderWatts {
+    max-width: 30%;
+  }
 
-table.tabelaPrecos a {
-  color: black;
-}
+  #wattsFilter {
+    background-color: #dbdbe0;
+  }
 
-#containerMonitoramento {
-  display: flex;
-  flex-direction: column;
-}
+  .filterRow {
+    width: 60%;
+  }
 
-#containerMonitoramento p {
-  margin-bottom: 3px;
-  margin-top: 0;
-}
+  .filterRow label {
+    width: 30%;
+    display: inline-block;
+  }
 
-#containerMonitoramento h3 {
-  margin-top: 5px;
-  margin-bottom: 2px;
-}
-
-.formFiltro {
-  background-color: #dbdbe0;
-  padding-left: 20px;
-  padding-top: 10px;
-  margin-top: 45px;
-  width: 100%;
-  display: flex;
-}
-
-.formFiltroPSU {
-  display: block !important;
-}
-
-.formFiltro .filterLeft {
-  width: 50%;
-}
-
-.formFiltro .filterRight {
-  width: 50%;
-}
-
-.formFiltro label {
-  width: 100px;
-}
-
-#atualizarLista {
-  background-color: #4CAF50;
-  color: white;
-  border-radius: 5px;
-  border-color: #4CAF50;
-  margin-top: 5px;
-  margin-bottom: 10px;
-}
-
-.tableTitle {
-  margin-left: 0.5%;
-}
-
-#sliderWatts {
-  max-width: 30%;
-}
-
-#wattsFilter {
-  background-color: #dbdbe0;
-}
-
-.filterRow {
-  width: 60%;
-}
-
-.filterRow label {
-  width: 30%;
-  display: inline-block;
-}
-
-#containerButtonFilter {
-  width: 10%;
-  display: flex;
-  justify-content: center;
-}
+  #containerButtonFilter {
+    width: 10%;
+    display: flex;
+    justify-content: center;
+  }
